# rusty-hackernews

./: .env.sample  .gitignore  Cargo.toml  Procfile  README.md
.github/workflows/: database_migrations.yml  deploy.yml
client/: Cargo.toml  index.html
client/src/: app.rs  constants.rs  main.rs  router.rs
client/src/components/: header.rs  mod.rs  post.rs  raw_html.rs  story.rs  stream.rs
client/src/modules/home/: mod.rs
client/src/modules/home/components/: mod.rs  stream.rs
client/src/modules/story/: mod.rs
client/src/modules/story/components/: comments.rs  mod.rs  story.rs
client/src/pages/: home.rs  mod.rs  story.rs
client/src/utils/: url.rs
client/styles/: app.scss  header.scss  post.scss  story.scss  stream.scss
client/styles/pages/: story.scss
common/: Cargo.toml
common/src/: lib.rs
docs/curl/: login-user.sh  signup-user.sh
migrations/: 20210811020701_previews.sql  20210811020824_delete_old_previews.sql  20210811021234_trigger_delete_old_previews.sql  20210813020056_text_type_for_previews_url.sql  20210818192813_previews_url_hash.sql  20210826010434_users.sql  20210904112854_users_token_col.sql
server/: Cargo.toml
server/src/: app_data.rs  environment.rs  error.rs  main.rs
server/src/domain/: user.rs
server/src/middleware/: cors.rs
server/src/models/: mod.rs
server/src/routes/: mod.rs
server/src/routes/api/v1/: mod.rs  previews.rs  stories.rs  users.rs
server/src/services/: hacker_news.rs  link_preview.rs  mod.rs  user.rs
server/src/utils/: sha256.rs
src/: app_data.rs  error.rs  main.rs
src/models/: hacker_news.rs
src/routes/: index.rs  mod.rs  statics.rs
src/routes/api/v1/: stories.rs
src/services/: hacker_news.rs  mod.rs
static/: app-58e86c39b449ed26.css  index-c519b2f6943c32a4.js  index-c519b2f6943c32a4_bg.wasm  index.html
styles/: app.scss  header.scss  post.scss
templates/: footer.hbs  header.hbs  index.hbs  layout.hbs
