[package]
name = "fluxcap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
handlebars = { version = "4.1.0", features = ["dir_source"] }
reqwest = "0.11.4"
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"
