[package]
name = "common"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = { version = "0.4.19", features = [ "serde" ] }
serde = "1.0.126"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = [ "serde" ] }
