[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
anyhow = "1.0.42"
common = { path = "../common" }
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
futures = "0.3.16"
link-preview = { version = "0.0.2", features = ["fetch"] }
reqwest = { version = "0.11.4", features = ["stream"] }
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = [ "chrono", "postgres", "runtime-actix-native-tls", "uuid" ] }
thiserror = "1.0.26"
tokio = "1.9.0"
uuid = { version = "0.8.2", features = [ "serde" ] }
