[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.8"
anyhow = "1.0.42"
bcrypt = "0.10.1"
common = { path = "../common" }
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
futures = "0.3.16"
http-auth-basic = "0.3.1"
link-preview = { version = "0.0.3", features = ["fetch"] }
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["stream"] }
sentry = "0.23.0"
serde = "1.0.126"
serde_json = "1.0.64"
sha2 = "0.9.5"
sqlx = { version = "0.5.5", features = [ "chrono", "postgres", "runtime-actix-native-tls", "uuid" ] }
thiserror = "1.0.26"
tokio = "1.9.0"
uuid = { version = "0.8.2", features = [ "serde" ] }
